finish notes-Project
